@@ -313,7 +313,7 @@ public class LiveActivity extends PlaybackActivity implements GroupAdapter.OnCli
         if (epg.getWidth() == 0) for (EpgData item : epg.getList()) epg.setWidth(Math.max(epg.getWidth(), ResUtil.getTextWidth(item.getTitle(), 16)));
         int maxWidth = ResUtil.getScreenWidth() / 2;
         int minContentWidth = Math.min(minWidth + padding, maxWidth);
-        int width = epg.getWidth() == 0 ? 0 : Math.clamp(epg.getWidth() + padding, minContentWidth, maxWidth);
+        int width = epg.getWidth() == 0 ? 0 : Math.max(minContentWidth, Math.min(maxWidth, epg.getWidth() + padding));
         setWidth(mBinding.epgData, width);
     }
 
