@@ -78,19 +78,19 @@ public class DanmakuSetting {
     }
 
     public static float getTextScale() {
-        return Math.clamp(Prefers.getFloat("danmaku_text_scale", 1f), MIN_TEXT_SCALE, MAX_TEXT_SCALE);
+        return Math.max(MIN_TEXT_SCALE, Math.min(MAX_TEXT_SCALE, Prefers.getFloat("danmaku_text_scale", 1f)));
     }
 
     public static void putTextScale(float value) {
-        Prefers.put("danmaku_text_scale", Math.clamp(value, MIN_TEXT_SCALE, MAX_TEXT_SCALE));
+        Prefers.put("danmaku_text_scale", Math.max(MIN_TEXT_SCALE, Math.min(MAX_TEXT_SCALE, value)));
     }
 
     public static float getTransparency() {
-        return Math.clamp(Prefers.getFloat("danmaku_transparency", 0f), MIN_TRANSPARENCY, MAX_TRANSPARENCY);
+        return Math.max(MIN_TRANSPARENCY, Math.min(MAX_TRANSPARENCY, Prefers.getFloat("danmaku_transparency", 0f)));
     }
 
     public static void putTransparency(float value) {
-        Prefers.put("danmaku_transparency", Math.clamp(value, MIN_TRANSPARENCY, MAX_TRANSPARENCY));
+        Prefers.put("danmaku_transparency", Math.max(MIN_TRANSPARENCY, Math.min(MAX_TRANSPARENCY, value)));
     }
 
     public static boolean isTextBold() {
@@ -118,123 +118,123 @@ public class DanmakuSetting {
     }
 
     public static float getShadowTransparency() {
-        return Math.clamp(Prefers.getFloat("danmaku_shadow_transparency", 0.1f), MIN_TRANSPARENCY, MAX_TRANSPARENCY);
+        return Math.max(MIN_TRANSPARENCY, Math.min(MAX_TRANSPARENCY, Prefers.getFloat("danmaku_shadow_transparency", 0.1f)));
     }
 
     public static void putShadowTransparency(float value) {
-        Prefers.put("danmaku_shadow_transparency", Math.clamp(value, MIN_TRANSPARENCY, MAX_TRANSPARENCY));
+        Prefers.put("danmaku_shadow_transparency", Math.max(MIN_TRANSPARENCY, Math.min(MAX_TRANSPARENCY, value)));
     }
 
     public static float getStrokeWidthMultiplier() {
-        return Math.clamp(Prefers.getFloat("danmaku_stroke_width_multiplier", 0.12f), MIN_STROKE_WIDTH_MULTIPLIER, MAX_STROKE_WIDTH_MULTIPLIER);
+        return Math.max(MIN_STROKE_WIDTH_MULTIPLIER, Math.min(MAX_STROKE_WIDTH_MULTIPLIER, Prefers.getFloat("danmaku_stroke_width_multiplier", 0.12f)));
     }
 
     public static void putStrokeWidthMultiplier(float value) {
-        Prefers.put("danmaku_stroke_width_multiplier", Math.clamp(value, MIN_STROKE_WIDTH_MULTIPLIER, MAX_STROKE_WIDTH_MULTIPLIER));
+        Prefers.put("danmaku_stroke_width_multiplier", Math.max(MIN_STROKE_WIDTH_MULTIPLIER, Math.min(MAX_STROKE_WIDTH_MULTIPLIER, value)));
     }
 
     public static float getProjectionOffsetX() {
-        return Math.clamp(Prefers.getFloat("danmaku_projection_offset_x", 0.08f), MIN_PROJECTION_OFFSET, MAX_PROJECTION_OFFSET);
+        return Math.max(MIN_PROJECTION_OFFSET, Math.min(MAX_PROJECTION_OFFSET, Prefers.getFloat("danmaku_projection_offset_x", 0.08f)));
     }
 
     public static void putProjectionOffsetX(float value) {
-        Prefers.put("danmaku_projection_offset_x", Math.clamp(value, MIN_PROJECTION_OFFSET, MAX_PROJECTION_OFFSET));
+        Prefers.put("danmaku_projection_offset_x", Math.max(MIN_PROJECTION_OFFSET, Math.min(MAX_PROJECTION_OFFSET, value)));
     }
 
     public static float getProjectionOffsetY() {
-        return Math.clamp(Prefers.getFloat("danmaku_projection_offset_y", 0.08f), MIN_PROJECTION_OFFSET, MAX_PROJECTION_OFFSET);
+        return Math.max(MIN_PROJECTION_OFFSET, Math.min(MAX_PROJECTION_OFFSET, Prefers.getFloat("danmaku_projection_offset_y", 0.08f)));
     }
 
     public static void putProjectionOffsetY(float value) {
-        Prefers.put("danmaku_projection_offset_y", Math.clamp(value, MIN_PROJECTION_OFFSET, MAX_PROJECTION_OFFSET));
+        Prefers.put("danmaku_projection_offset_y", Math.max(MIN_PROJECTION_OFFSET, Math.min(MAX_PROJECTION_OFFSET, value)));
     }
 
     public static float getProjectionTransparency() {
-        return Math.clamp(Prefers.getFloat("danmaku_projection_transparency", 0.2f), MIN_TRANSPARENCY, MAX_TRANSPARENCY);
+        return Math.max(MIN_TRANSPARENCY, Math.min(MAX_TRANSPARENCY, Prefers.getFloat("danmaku_projection_transparency", 0.2f)));
     }
 
     public static void putProjectionTransparency(float value) {
-        Prefers.put("danmaku_projection_transparency", Math.clamp(value, MIN_TRANSPARENCY, MAX_TRANSPARENCY));
+        Prefers.put("danmaku_projection_transparency", Math.max(MIN_TRANSPARENCY, Math.min(MAX_TRANSPARENCY, value)));
     }
 
     public static long getDurationMs() {
-        return Math.clamp(Prefers.getLong("danmaku_duration", 8000L), MIN_DURATION_MS, MAX_DURATION_MS);
+        return Math.max(MIN_DURATION_MS, Math.min(MAX_DURATION_MS, Prefers.getLong("danmaku_duration", 8000L)));
     }
 
     public static void putDurationMs(long value) {
-        Prefers.put("danmaku_duration", Math.clamp(value, MIN_DURATION_MS, MAX_DURATION_MS));
+        Prefers.put("danmaku_duration", Math.max(MIN_DURATION_MS, Math.min(MAX_DURATION_MS, value)));
     }
 
     public static long getFixedDurationMs() {
-        return Math.clamp(Prefers.getLong("danmaku_fixed_duration", 5000L), MIN_FIXED_DURATION_MS, MAX_FIXED_DURATION_MS);
+        return Math.max(MIN_FIXED_DURATION_MS, Math.min(MAX_FIXED_DURATION_MS, Prefers.getLong("danmaku_fixed_duration", 5000L)));
     }
 
     public static void putFixedDurationMs(long value) {
-        Prefers.put("danmaku_fixed_duration", Math.clamp(value, MIN_FIXED_DURATION_MS, MAX_FIXED_DURATION_MS));
+        Prefers.put("danmaku_fixed_duration", Math.max(MIN_FIXED_DURATION_MS, Math.min(MAX_FIXED_DURATION_MS, value)));
     }
 
     public static long getTimeOffsetMs() {
-        return Math.clamp(Prefers.getLong("danmaku_time_offset", 0L), MIN_TIME_OFFSET_MS, MAX_TIME_OFFSET_MS);
+        return Math.max(MIN_TIME_OFFSET_MS, Math.min(MAX_TIME_OFFSET_MS, Prefers.getLong("danmaku_time_offset", 0L)));
     }
 
     public static void putTimeOffsetMs(long value) {
-        Prefers.put("danmaku_time_offset", Math.clamp(value, MIN_TIME_OFFSET_MS, MAX_TIME_OFFSET_MS));
+        Prefers.put("danmaku_time_offset", Math.max(MIN_TIME_OFFSET_MS, Math.min(MAX_TIME_OFFSET_MS, value)));
     }
 
     public static int getMaxOnScreen() {
-        return Math.clamp(Prefers.getInt("danmaku_max_on_screen", 150), MIN_MAX_ON_SCREEN, MAX_MAX_ON_SCREEN);
+        return Math.max(MIN_MAX_ON_SCREEN, Math.min(MAX_MAX_ON_SCREEN, Prefers.getInt("danmaku_max_on_screen", 150)));
     }
 
     public static void putMaxOnScreen(int value) {
-        Prefers.put("danmaku_max_on_screen", Math.clamp(value, MIN_MAX_ON_SCREEN, MAX_MAX_ON_SCREEN));
+        Prefers.put("danmaku_max_on_screen", Math.max(MIN_MAX_ON_SCREEN, Math.min(MAX_MAX_ON_SCREEN, value)));
     }
 
     public static float getScrollAreaRatio() {
-        return Math.clamp(Prefers.getFloat("danmaku_scroll_area_ratio", 0.5f), MIN_SCROLL_AREA_RATIO, MAX_SCROLL_AREA_RATIO);
+        return Math.max(MIN_SCROLL_AREA_RATIO, Math.min(MAX_SCROLL_AREA_RATIO, Prefers.getFloat("danmaku_scroll_area_ratio", 0.5f)));
     }
 
     public static void putScrollAreaRatio(float value) {
-        Prefers.put("danmaku_scroll_area_ratio", Math.clamp(value, MIN_SCROLL_AREA_RATIO, MAX_SCROLL_AREA_RATIO));
+        Prefers.put("danmaku_scroll_area_ratio", Math.max(MIN_SCROLL_AREA_RATIO, Math.min(MAX_SCROLL_AREA_RATIO, value)));
     }
 
     public static int getMaxScrollLines() {
-        return Math.clamp(Prefers.getInt("danmaku_max_scroll_lines", 0), MIN_MAX_SCROLL_LINES, MAX_MAX_SCROLL_LINES);
+        return Math.max(MIN_MAX_SCROLL_LINES, Math.min(MAX_MAX_SCROLL_LINES, Prefers.getInt("danmaku_max_scroll_lines", 0)));
     }
 
     public static void putMaxScrollLines(int value) {
-        Prefers.put("danmaku_max_scroll_lines", Math.clamp(value, MIN_MAX_SCROLL_LINES, MAX_MAX_SCROLL_LINES));
+        Prefers.put("danmaku_max_scroll_lines", Math.max(MIN_MAX_SCROLL_LINES, Math.min(MAX_MAX_SCROLL_LINES, value)));
     }
 
     public static int getMaxTopLines() {
-        return Math.clamp(Prefers.getInt("danmaku_max_top_lines", 0), MIN_MAX_FIXED_LINES, MAX_MAX_FIXED_LINES);
+        return Math.max(MIN_MAX_FIXED_LINES, Math.min(MAX_MAX_FIXED_LINES, Prefers.getInt("danmaku_max_top_lines", 0)));
     }
 
     public static void putMaxTopLines(int value) {
-        Prefers.put("danmaku_max_top_lines", Math.clamp(value, MIN_MAX_FIXED_LINES, MAX_MAX_FIXED_LINES));
+        Prefers.put("danmaku_max_top_lines", Math.max(MIN_MAX_FIXED_LINES, Math.min(MAX_MAX_FIXED_LINES, value)));
     }
 
     public static int getMaxBottomLines() {
-        return Math.clamp(Prefers.getInt("danmaku_max_bottom_lines", 0), MIN_MAX_FIXED_LINES, MAX_MAX_FIXED_LINES);
+        return Math.max(MIN_MAX_FIXED_LINES, Math.min(MAX_MAX_FIXED_LINES, Prefers.getInt("danmaku_max_bottom_lines", 0)));
     }
 
     public static void putMaxBottomLines(int value) {
-        Prefers.put("danmaku_max_bottom_lines", Math.clamp(value, MIN_MAX_FIXED_LINES, MAX_MAX_FIXED_LINES));
+        Prefers.put("danmaku_max_bottom_lines", Math.max(MIN_MAX_FIXED_LINES, Math.min(MAX_MAX_FIXED_LINES, value)));
     }
 
     public static float getLineSpacing() {
-        return Math.clamp(Prefers.getFloat("danmaku_line_spacing", 1.4f), MIN_LINE_SPACING, MAX_LINE_SPACING);
+        return Math.max(MIN_LINE_SPACING, Math.min(MAX_LINE_SPACING, Prefers.getFloat("danmaku_line_spacing", 1.4f)));
     }
 
     public static void putLineSpacing(float value) {
-        Prefers.put("danmaku_line_spacing", Math.clamp(value, MIN_LINE_SPACING, MAX_LINE_SPACING));
+        Prefers.put("danmaku_line_spacing", Math.max(MIN_LINE_SPACING, Math.min(MAX_LINE_SPACING, value)));
     }
 
     public static float getScrollGapRatio() {
-        return Math.clamp(Prefers.getFloat("danmaku_scroll_gap_ratio", 0f), MIN_SCROLL_GAP_RATIO, MAX_SCROLL_GAP_RATIO);
+        return Math.max(MIN_SCROLL_GAP_RATIO, Math.min(MAX_SCROLL_GAP_RATIO, Prefers.getFloat("danmaku_scroll_gap_ratio", 0f)));
     }
 
     public static void putScrollGapRatio(float value) {
-        Prefers.put("danmaku_scroll_gap_ratio", Math.clamp(value, MIN_SCROLL_GAP_RATIO, MAX_SCROLL_GAP_RATIO));
+        Prefers.put("danmaku_scroll_gap_ratio", Math.max(MIN_SCROLL_GAP_RATIO, Math.min(MAX_SCROLL_GAP_RATIO, value)));
     }
 
     public static boolean isShowScroll() {
